<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/navigation"
            app:startDestination="@id/pokemonListFragment">

    <fragment android:id="@+id/pokemonListFragment"
              android:name="edu.pokemon.iut.tuttidex.ui.pokemonlist.PokemonListFragment"
              android:label="@string/app_name"
              tools:layout="@layout/fragment_pokemon_list">
        <action android:id="@+id/action_pokemonListFragment_to_pokemonDetailFragment"
                app:destination="@id/pokemonDetailFragment" app:enterAnim="@anim/nav_default_enter_anim"
                app:exitAnim="@anim/nav_default_exit_anim"/>
    </fragment>

    <fragment android:id="@+id/pokemonDetailFragment"
              android:name="edu.pokemon.iut.tuttidex.ui.pokemondetail.PokemonDetailFragment"
              android:label="@string/pokemon_detail"
              tools:layout="@layout/fragment_pokemon_detail">
        <argument android:name="pokemonId"
                  app:argType="integer"/>
    </fragment>

    <fragment android:id="@+id/aboutFragment"
              android:name="edu.pokemon.iut.tuttidex.AboutFragment"
              android:label="@string/about"
              tools:layout="@layout/fragment_about"/>

    <fragment android:id="@+id/pokemonCreateFragment"
              android:name="edu.pokemon.iut.tuttidex.ui.pokemoncreate.PokemonCreateFragment"
              android:label="@string/create_pokemon"
              tools:layout="@layout/fragment_pokemon_create"/>
</navigation>